<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98D2EB"
    tools:context=".MainActivity">

    <!-- My Closet  -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_closet"
        android:textColor="#49392C"
        android:textColorHighlight="#B2B1CF"
        android:textSize="48sp"
        android:background="#B2B1CF"
        android:fontFamily="@font/pretty_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <!-- Username -->
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPassword"
        android:fontFamily="@font/pretty_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.047" />

    <!-- Password -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:fontFamily="@font/pretty_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:backgroundTint="#B2B1Cf"
        android:hint="@string/button_for_logging_in_after_entering_login_info"
        android:text="@string/login"
        style="@style/MyButtonStyle"
        android:textColor="#49392C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <!-- Forgot Username -->
    <TextView
        android:id="@+id/forgotUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E1F2FE"
        android:text="@string/forgot_user"
        android:textColor="#77625c"
        android:fontFamily="@font/pretty_font"
        app:layout_constraintTop_toTopOf="@id/editTextUsername"
        app:layout_constraintBottom_toBottomOf="@id/editTextUsername"
        app:layout_constraintStart_toEndOf="@id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp" />

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#E1F2FE"
        android:text="@string/forgot_pw"
        android:textColor="#77625c"
        android:fontFamily="@font/pretty_font"
        app:layout_constraintTop_toTopOf="@id/editTextPassword"
        app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toEndOf="@id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp" />

    <!-- logo -->

    <!-- create account button -->

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="204dp"
        android:layout_height="139dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="117dp"
        android:layout_height="109dp"
        android:backgroundTint="#3377625C"
        android:text="@string/create_account"
        android:textColor="#E1F2FE"
        android:textSize="16sp"
        android:fontFamily="@font/pretty_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.035" />


</androidx.constraintlayout.widget.ConstraintLayout>